[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-agentic-ai"
version = "0.1.0"
description = "G.O.A.T Agentic AI - A terminal UI based AI agent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Divesh Sanjay Kshirsagar", email = "diveshkshirsagar42@gmail.com"},
]
maintainers = [
    {name = "Divesh Sanjay Kshirsagar", email = "diveshkshirsagar42@gmail.com"},
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiohttp-jinja2==1.6",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backoff==2.2.1",
    "backrefs==5.9",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.5",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "bracex==2.6",
    "build==1.3.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "chromadb==1.3.4",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "distro==1.9.0",
    "durationpy==0.10",
    "ecdsa==0.19.1",
    "EditorConfig==0.17.1",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.7.0",
    "fsspec==2025.10.0",
    "ghp-import==2.1.0",
    "gitdb==4.0.12",
    "google-ai-generativelanguage==0.9.0",
    "google-api-core==2.28.1",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.2.4",
    "griffe==1.13.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface_hub==1.1.2",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "importlib_resources==6.5.2",
    "Jinja2==3.1.6",
    "jsbeautifier==1.15.4",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kubernetes==34.1.0",
    "langchain==1.0.5",
    "langchain-core==1.0.4",
    "langchain-google-genai==3.0.1",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.2",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.42",
    "linkify-it-py==2.0.3",
    "loguru==0.7.3",
    "Markdown==3.8.2",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.6.23",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-mermaid2-plugin==1.2.3",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.6.4",
    "narwhals==2.2.0",
    "natsort==8.4.0",
    "numpy==2.3.2",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "paginate==0.5.7",
    "pandas==2.3.2",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "plotly==6.3.0",
    "pluggy==1.6.0",
    "posthog==5.4.0",
    "prometheus_client==0.22.1",
    "prompt_toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.32.0",
    "pyaes==1.6.1",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pybase64==1.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydeck==0.9.1",
    "Pygments==2.19.2",
    "pymdown-extensions==10.16.1",
    "PyPika==0.48.9",
    "pyproject_hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "pyyaml_env_tag==1.1",
    "redis==6.4.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "scipy==1.16.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.43",
    "sqlite-fts4==1.0.3",
    "starlette==0.47.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "Telethon==1.40.0",
    "tenacity==9.1.2",
    "textual==6.5.0",
    "textual-serve==1.1.3",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uc-micro-py==1.0.3",
    "urllib3==2.3.0",
    "uv==0.9.4",
    "uvicorn==0.35.0",
    "vine==5.1.0",
    "watchdog==6.0.0",
    "watchfiles==1.1.0",
    "wcmatch==10.1",
    "wcwidth==0.2.13",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "win32_setctime==1.2.0",
    "xxhash==3.6.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
Issues = ""
Changelog = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
